--- a/week-1-seminar/week-1-seminar/Base.lproj/Main.storyboard
+++ b/week-1-seminar/week-1-seminar/Base.lproj/Main.storyboard
@@ -151,6 +151,16 @@
                                 <rect key="frame" x="87" y="158" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HY5-4F-EdT">
+                                <rect key="frame" x="0.0" y="44" width="48" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="chevron.backward" catalog="system"/>
+                                <connections>
+                                    <action selector="tapBackBtn:" destination="q3k-RR-lRy" eventType="touchUpInside" id="rLi-EV-Lam"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="xxH-0f-Zp4"/>
                         <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -165,6 +175,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <image name="memoji1" width="140.33332824707031" height="141.33332824707031"/>
         <image name="memoji2" width="140.33332824707031" height="140.33332824707031"/>
         <image name="memoji6" width="140.33332824707031" height="146.33332824707031"/>
